fixed visual bug where input was too big

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ h1 {
   font: 16px arial, sans-serif;
   line-height: 34px;
   height: 34px;
-  margin-right: 0px;
+  margin-right: 10px;
 }
 
 .google-search-button:hover {
